search by name added to home and projects pages

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,7 +46,7 @@
                                             <a class="nav-link {% if title == 'Upload' %}active{% endif %}" href="{{ url_for('upload') }}">Upload</a>
                                         </li>
                                         <li class="nav-item">
-                                        <a class="nav-link {% if title == 'Info' %}active{% endif %}" href="{{ url_for('info') }}">Info</a>
+                                        <a class="nav-link {% if title == 'Info' %}active{% endif %}" href="{{ url_for('info') }}">User guide</a>
                                         </li>
                                     </ul>
                                     </div>
