finished layout at homepage

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,14 @@
       <div class="row mt-5">
           <div class="col-sm-8 font-weight-light mx-auto mt-5">
               <h1 class="display-4 mb-0">DHDKey</h1>
-              <h4 class="lead mt-0" style="font-variant: small-caps;">Digital Humanities & Digital Knowledge Educational Yearbook</h4>
+              <h4 class="lead mt-0" style="font-variant: small-caps;">
+                  <span class="text-nowrap">
+                    Digital Humanities & Digital Knowledge
+                  </span>
+                  <span class="text-nowrap">
+                      Educational Yearbook
+                  </span> 
+              </h4>
               <!-- <hr class="my-4"> -->
               <!-- <p class="lead">Explore students' projects from the <b><a class="text-white" href="https://corsi.unibo.it/2cycle/DigitalHumanitiesKnowledge">Digital Humanities & Digital Knowledge course at the University of Bologna</a></b>.</p>  -->
 
