--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,7 +27,7 @@
     <body class="d-flex flex-column">
                 <div style="min-height: 100vh">
                     <div class="head">
-                            <nav class="navbar navbar-expand navbar-light shadow-sm px-5">
+                            <nav class="navbar navbar-expand navbar-light shadow-sm px-sm-5 px-0">
                                     <a class="navbar-brand" style="font-size: 20pt !important; font-weight:200 !important" href="{{ url_for('index') }}">DHDKey</a>
                                     {% if title != "Confirmation" %}
                                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,16 +37,16 @@
                                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                     <ul class="navbar-nav mr-auto">
                                         <li class="nav-item {% if title == 'Home' %}active{% endif %}">
-                                            <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+                                            <a class="text-nowrap nav-link" href="{{ url_for('index') }}">Home</a>
                                         </li>
                                         <li class="nav-item {% if title == 'Projects' %}active{% endif %}">
-                                                <a class="nav-link" href="{{ url_for('projects') }}">Projects</a>
+                                            <a class="text-nowrap nav-link" href="{{ url_for('projects') }}">Projects</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link {% if title == 'Upload' %}active{% endif %}" href="{{ url_for('upload') }}">Upload</a>
+                                            <a class="text-nowrap nav-link {% if title == 'Upload' %}active{% endif %}" href="{{ url_for('upload') }}">Upload</a>
                                         </li>
                                         <li class="nav-item">
-                                        <a class="nav-link {% if title == 'Info' %}active{% endif %}" href="{{ url_for('info') }}">User guide</a>
+                                            <a class="text-nowrap nav-link {% if title == 'Info' %}active{% endif %}" href="{{ url_for('info') }}">User guide</a>
                                         </li>
                                     </ul>
                                     </div>
@@ -61,38 +61,48 @@
                 </div>
     <footer class="footer bg-dark text-light">
         <div class="container">
-            <div class="row">
-                <div class="col-md-5">
-                    <h3 style="font-weight:300 !important">DHDKey</h3>
-                    <h5 style="font-weight:300 !important"><a href="{{ url_for('info') }}" class="text-secondary">Info</a></h5>
-                    <h5 style="font-weight:300 !important"><a href="{{ url_for('privacy') }}" class="text-secondary">Privacy Policy</a></h5>
-                    <h5 style="font-weight:300 !important"><a href="https://github.com/dharc-org/dhdkey/blob/master/README.md" class="text-secondary" target="_blank">Documentation <i class="fas fa-external-link-alt fa-xs"></i></a></h5>
+            <div class="row d-flex justify-content-left flex-wrap my-1">
+                <div class="col-6 d-flex flex-column align-items-start justify-content-around mx-0 my-1" style="min-width: fit-content;">
+                    <div class="mx-0 w-100" style="min-width: fit-content;"><h4 class="fw-lighter mb-0 w-100">DHDKey</h4></div>
+                    <div class="d-inline-flex justify-content-start w-100 gap-2 align-items-baseline flex-nowrap">
+                        <a href="{{ url_for('info') }}" class="text-secondary text-nowrap fw-light">Info</a>
+                        <a href="{{ url_for('privacy') }}" class="text-secondary text-nowrap fw-light">Privacy Policy</a>
+                        <a href="https://github.com/dharc-org/dhdkey/blob/master/README.md" class="text-secondary text-nowrap fw-light" target="_blank">Documentation <i class="fas fa-external-link-alt fa-xs"></i></a>
+                    </div>
                 </div>
-                <div class="col-md-7 mt-5 mt-md-0">
-                    <h4 style="font-weight:300 !important">/DH.Arc - Digital Humanities Advanced Research Centre</h4>
-                    <h5 style="font-weight:300 !important"><a href="https://centri.unibo.it/dharc/en" class="text-secondary" target="_blank">/DH.Arc - Website <i class="fas fa-external-link-alt fa-xs"></i></a></h5>
-                    <h5 style="font-weight:300 !important"><a href="https://centri.unibo.it/dharc/en/contacts" class="text-secondary" target="_blank">/DH.Arc - Contacts <i class="fas fa-external-link-alt fa-xs"></i></a></h5>                
-               
+                <div class="col-6 d-flex flex-column align-items-start justify-content-around mx-0 my-1" style="min-width: fit-content;">
+                    <div class="mx-0 w-100" style="min-width: fit-content;"><h5 class="fw-lighter mb-0 w-100; text-nowrap">/DH.Arc - Digital Humanities Advanced Research Centre</h5></div>
+                    <div class="d-inline-flex justify-content-start w-100 gap-2 align-items-baseline flex-nowrap">
+                        <a href="https://centri.unibo.it/dharc/en" class="text-secondary text-nowrap fw-light" target="_blank">/DH.Arc - Website <i class="fas fa-external-link-alt fa-xs"></i></a>
+                        <a href="https://centri.unibo.it/dharc/en/contacts" class="text-secondary text-nowrap fw-light" target="_blank">/DH.Arc - Contacts <i class="fas fa-external-link-alt fa-xs"></i></a>             
+                    </div>
                 </div>
             </div>
          </footer>
 
-         <footer class="footer bg-secondary text-white py-2">
+         <footer class="footer bg-secondary text-white py-1">
                 <div class="container">
-                    <div class="row">
-                            <div class="col-md-8">
-                                ©2020  DHDKey - Digital Humanities & Digital Knowledge Educational Yearbook
+                    <div class="d-inline-flex justify-content-between w-100 flex-wrap" style="min-width: fit-content;">
+                            <div class="my-1" style="min-width: fit-content;">
+                                <div class="fw-light mb-0 w-100;">
+                                    <span class="text-nowrap">
+                                        ©2020–2023  DHDKey - Digital Humanities & Digital Knowledge
+                                    </span>
+                                    <span class="text-nowrap">
+                                        Educational Yearbook
+                                    </span> 
+                                </div>
                             </div>
 
                     {% if title != "Confirmation" %}
-                        <div class="col-md-4 text-right text-dark">
+                        <div class="my-1 text-right text-dark d-inline-flex justify-content-end">
                             {% if current_user.is_authenticated %}
-                                <a class="text-dark" href="{{ url_for('logout') }}">Admin Logout</a>
+                                <a class="text-dark text-right text-nowrap fw-light" href="{{ url_for('logout') }}">Admin Logout</a>
                             {%else%}
-                                <a class="text-dark" href="{{ url_for('admin') }}">Admin Login</a>
+                                <a class="text-dark text-right text-nowrap fw-light" href="{{ url_for('admin') }}">Admin Login</a>
                             {% endif %}
                             {% if current_user.is_authenticated %}
-                                - <a class="text-dark" href="{{ url_for('AdminConfirm') }}">Data Manager</a>
+                                - <a class="text-dark text-nowrap fw-light" href="{{ url_for('AdminConfirm') }}">Data Manager</a>
                             {%endif%}
                         </div>
                     </div>
