--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
 
       <div class="row mt-5">
           <div class="col-sm-8 font-weight-light mx-auto mt-5">
-              <h1 class="display-4 mb-0">DHDKey</h1>
+              <h1 class="display-4 mb-0">DHDKey!</h1>
               <h4 class="lead mt-0" style="font-variant: small-caps;">
                   <span class="text-nowrap">
                     Digital Humanities & Digital Knowledge
@@ -256,10 +256,9 @@
     <script src="https://unpkg.com/vuejs-paginate@2.1.0/dist/index.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/minisearch@6.1.0/dist/umd/index.min.js"></script>
 
     <script>
-
 
     function showOptions() {
       if (document.getElementById("search-input").value !== "") {
@@ -317,24 +316,39 @@
     });
 
 
+    rows = rows.sort((x, y) => x.title > y.title)
+    for (let i = 0; i < rows.length; i++) {
+      rows[i].id = i+1 ;
+    }
+    // console.log(rows)
+    let miniSearch = new MiniSearch({
+      fields: ['title', 'description', 'authors']
+    })
 
+    // console.log(rows)
+    miniSearch.addAll(rows);
     var configuration = {
-      searchableFields: ['title', 'authors'],
-      sortings: { name_asc: {field: 'title', order: 'asc'}},
+      // searchableFields: ['title', 'description', 'authors'],
+      // sortings: { name_asc: {field: 'title', order: 'asc'}},
+      native_search_enabled: false,
+      custom_id_field: 'id',
       aggregations: {
         year: {
           title: 'Academic Year',
-          size: 10
+          size: 10,
+          conjunction: false
         },
         course: {
           title: 'Course',
-          size: 10
+          size: 10,
+          conjunction: false
         },
       }
     }
 
-    console.log(rows)
+    // console.log(rows)
     itemsjs = itemsjs(rows, configuration);
+    var searchResultData = []
 
     // add vue component for pagination
     Vue.component('paginate', VuejsPaginate)
@@ -363,40 +377,65 @@
           }
       },
       methods: {
-        getId: function (index, array) {
-          return array[index]
-        },
-        reset: function () {
-          var filters = {};
-          Object.keys(configuration.aggregations).map(function(v) {
-            filters[v] = [];
-            })
-          this.filters = filters;
-          this.page = 1;
-          this.query = '';
-        },
-        goToPage: function (page) {
-          this.page = page;
-          return page;
-        },
-      },
-      watch: {
-        query: function () {
-          this.page = 1;
-        }
-      },
-      computed: {
-        searchResult: function () {
-          var result = itemsjs.search({
-            query: this.query,
-            page: this.page,
-            per_page: 100,
-            filters: this.filters
-          })
-        return result
-        }
-      }
-    });
+    getId: function (index, array) {
+      return array[index]
+    },
+   reset: function () {
+     var filters = {};
+     Object.keys(configuration.aggregations).map(function(v) {
+       filters[v] = [];
+     })
+
+     this.filters = filters;
+     this.page = 1;
+     this.query = '';
+   },
+   goToPage: function (page) {
+     this.page = page;
+     return page;
+   },
+ },
+ watch: {
+     query: function () {
+      this.page = 1;
+    },
+    
+ },
+ computed: {
+   searchResult: function () {
+    var search_results = []
+
+
+    // TODO: revisit this function
+    if (this.query && this.query.length) {
+      search_results = miniSearch.search(this.query, {prefix: true, boost: { title: 5 }, fuzzy: 0.2})
+      rowsUpdated = rows.filter(v => search_results.map(v => v.id).includes(v.id));
+      rowsUpdated = rowsUpdated.sort((x,y) => search_results.map(v => v.id).indexOf(x.id) > search_results.map(v => v.id).indexOf(y.id))
+      itemsjs.reindex(rowsUpdated)
+      rowsData = rowsUpdated
+      
+    } else {
+      itemsjs.reindex(rows)
+      rowsData = rows
+    }
+
+    
+     var result = itemsjs.search({
+      //  query: this.query,
+       ids: search_results.map(v => v.id),
+       page: this.page,
+       per_page: 6,
+       filters: this.filters
+     })
+    searchResultData = itemsjs.search({
+      //  query: this.query,
+       ids: search_results.map(v => v.id),
+       filters: this.filters
+     })     
+     return result
+   }
+ }
+});
 
 
 
