--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -3,109 +3,90 @@
 {% block content %}
 <div class="container">
 
-  {% if author %}
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item {% if not author %} active  {% endif %}"><a
-          href="{{ url_for('projects') }}">Projects</a></li>
-      <li class="breadcrumb-item active" aria-current="page">{{ name }}</li>
-    </ol>
-    {% endif %}
+  
 
-    <div id="el" v-cloak style="margin-top: 30px;">
-      <div class="row mt-5">
-        <div class="col-lg-6">
-          {% if author %}
-          <h2>{{ name }}</h2>
-          <h5 class="d-none d-md-block" style="word-break:break-all;"><a
-              href="mailto:{{ mail }}" style="word-break:break-all;">{{ mail }}</a></h5>
-          <h6 class="d-block d-md-none" style="word-break:break-all;"><a
-              href="mailto:{{ mail }}" style="word-break:break-all;">{{ mail }}</a></h6>
-          {% else %}
-          <form>
-            <div class="form-group row">
-              <div class="col-10 pr-0">
-                <select id="author_selector"
-                  class="form-control form-control-lg" name="id" required
-                  style="width:100%; height:100%">
-                  <option value></option>
-                </select>
+    <div id="el" v-cloak class="mt-3" >
+      <div class="row fixed-top bg-white py-0 mb-0" style="margin-top: 9vh;">
+        <nav class="navbar navbar-expand navbar-light shadow-sm px-sm-5 px-0 py-0">
 
-              </div>
-              <div class="col-2 pl-0">
-                <button type="submit" class="btn btn-primary"
-                  style="width:100%; height: 35px !important;  border-radius: 0px 4px 4px 0px !important"><i
-                    class="fas fa-search"></i></button>
+          <div class="col-3">
+            
+            {% if author %}
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item {% if not author %} active  {% endif %}"><a
+                    href="{{ url_for('projects') }}">Projects</a></li>
+                <li class="breadcrumb-item active" aria-current="page">{{ name }}</li>
+              </ol>
+            {% endif %}
+          
+            {% if author %}
+            <h2>{{ name }}</h2>
+            
+            <h5 class="d-none d-md-block" style="word-break:break-all;"><a
+                href="mailto:{{ mail }}" style="word-break:break-all;">{{ mail }}</a></h5>
+            <h6 class="d-block d-md-none" style="word-break:break-all;"><a
+                href="mailto:{{ mail }}" style="word-break:break-all;">{{ mail }}</a></h6>
+                {% else %}
+            {% endif %}
 
-              </div>
+            <div class="d-block">
+              <h5>[[ searchResult.pagination.total ]] Item<span
+                  v-if="searchResult.pagination.total != 1">s</span> Found</h5>
             </div>
-          </form>
+            
+          </div>
 
-          <div id="navbar">
-            <form class="navbar-form navbar-left">
-              <div class="form-group row">
-                <div class="col-10 pr-0">
-                  <input id="search-input" type="text" v-model="query" oninput="processChange()"
-                    class="form-control" placeholder="Search">
+          <div class="col-6 mb-0">
+            <div id="navbar" >
+              <form class="navbar-form navbar-left">
+                <div class="form-group row">
+                  <div class="col-12">
+                    <input id="search-input" type="text" v-model="query" oninput="processChange()"
+                      class="form-control" placeholder="Search">
+                  </div>
+                  <!-- <div class="col-2 pl-0">
+                    <button type="submit" class="btn btn-primary"
+                      style="width:100%; height: 35px !important;  border-radius: 0px 4px 4px 0px !important"><i
+                        class="fas fa-search"></i></button>
+                  </div> -->
                 </div>
-                <div class="col-2 pl-0">
-                  <button type="submit" class="btn btn-primary"
-                    style="width:100%; height: 35px !important;  border-radius: 0px 4px 4px 0px !important"><i
-                      class="fas fa-search"></i></button>
-                </div>
-              </div>
-            </form>
-          </div><!--/.nav-collapse -->
-          {% endif %}
-        </div>
-        <!-- <div class="col-lg-6">    
+              </form>
+            </div>
+          </div>
 
-            </div> -->
+          <!-- <div class="col-3">
+            <div class="pagination-bar float-right">
+              <paginate
+                v-model="page"
+                :page-count="Math.ceil(searchResult.pagination.total / searchResult.pagination.per_page)"
+                :page-range="3"
+                :click-handler="goToPage"
+                :prev-text="'Prev'"
+                :next-text="'Next'"
+                :container-class="'pagination'"
+                :page-class="'page-item'"
+                :page-link-class="'page-link'"
+                :prev-class="'page-item'"
+                :next-class="'page-item'"
+                :prev-link-class="'page-link'"
+                :next-link-class="'page-link'"
+                :active-class="'active'">
+              </paginate>
+            </div>
+          </div> -->
+        </nav>
       </div>
 
-      <button type="button"
-        class="btn-block btn btn-secondary d-block d-sm-block d-md-none text-left mt-3"
+      <!-- <button type="button"
+        class="btn-block btn btn-secondary d-block d-sm-block  text-left mt-3"
         data-toggle="modal" data-target="#modal_filter">
         Refine Search<i class="pt-1 float-right fas fa-tasks"></i>
-      </button>
+      </button> -->
 
-      <div class="d-block d-md-none" style="margin-top: 20px;">
-        <h5>[[ searchResult.pagination.total ]] Item<span
-            v-if="searchResult.pagination.total != 1">s</span> Found</h5>
-      </div>
+      
 
-      <div class="row" style="margin-top: 20px;">
-        <div class="col-6">
-          <h5 class="d-none d-md-block">[[ searchResult.pagination.total ]] Item<span
-              v-if="searchResult.pagination.total != 1">s</span> Found</h5>
-        </div>
-
-        <div class="col-6">
-          <!-- div for pagination block -->
-          <div class="pagination-bar  float-right">
-            <paginate
-              v-model="page"
-              :page-count="Math.ceil(searchResult.pagination.total / searchResult.pagination.per_page)"
-              :page-range="3"
-              :click-handler="goToPage"
-              :prev-text="'Prev'"
-              :next-text="'Next'"
-              :container-class="'pagination'"
-              :page-class="'page-item'"
-              :page-link-class="'page-link'"
-              :prev-class="'page-item'"
-              :next-class="'page-item'"
-              :prev-link-class="'page-link'"
-              :next-link-class="'page-link'"
-              :active-class="'active'">
-            </paginate>
-          </div>
-        </div>
-
-
-      </div>
-
-      <div class="row">
+      <div class="row"  style="margin-top: 9vh;">
         <div class="modal" id="modal_filter" tabindex="-1" role="dialog"
           data-backdrop="static">
           <div class="modal-dialog" role="document">
@@ -145,25 +126,44 @@
             </div></div></div>
 
         <div class="col-3">
-          <div class="d-none d-sm-none d-md-block">
-            <div v-for="facet in searchResult.data.aggregations">
-              <h5 style="margin-bottom: 5px;"><strong style="color: #337ab7;">[[
-                  facet.title ]]</strong></h5>
+          <div class="col-10">
+            <form>
+              <div class="form-group row">
+                <div class="col-12 pr-0">
+                  <select id="author_selector"
+                    class="form-control form-control-lg" name="id" required 
+                    style="width:100%; height:100%">
+                    <option value></option>
+                  </select>
+                </div>
+                <!-- <div class="col-2 pl-0">
+                  <button type="submit" class="btn btn-primary"
+                    style="width:100%; height: 35px !important;  border-radius: 0px 4px 4px 0px !important"><i
+                      class="fas fa-search"></i></button>
 
-              <ul class="browse-list list-unstyled long-list"
-                style="margin-bottom: 0;">
-                <li v-for="bucket in facet.buckets">
-                  <div class="checkbox block"
-                    style="margin-top: 0; margin-bottom: 0;">
-                    <label>
-                      <input class="checkbox" @click="goToPage(1)"
-                        type="checkbox" v-model="filters[facet.name]"
-                        v-bind:value="bucket.key">
-                      [[ bucket.key ]] ([[ bucket.doc_count ]])
-                    </label>
-                  </div>
-                </li>
-              </ul>
+                </div> -->
+              </div>
+            </form>
+            <div class="d-none d-sm-none d-md-block">
+              <div v-for="facet in searchResult.data.aggregations">
+                <h5 style="margin-bottom: 5px;"><strong style="color: #337ab7;">[[
+                    facet.title ]]</strong></h5>
+
+                <ul class="browse-list list-unstyled long-list"
+                  style="margin-bottom: 0;">
+                  <li v-for="bucket in facet.buckets">
+                    <div class="checkbox block"
+                      style="margin-top: 0; margin-bottom: 0;">
+                      <label>
+                        <input class="checkbox" @click="goToPage(1)"
+                          type="checkbox" v-model="filters[facet.name]"
+                          v-bind:value="bucket.key">
+                        [[ bucket.key ]] ([[ bucket.doc_count ]])
+                      </label>
+                    </div>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
@@ -247,17 +247,11 @@
   <script src="https://unpkg.com/itemsjs@1.0.37/dist/itemsjs.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
   <script src="https://unpkg.com/vuejs-paginate@2.1.0/dist/index.js"></script>
-  <link
-    href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css"
-    rel="stylesheet" />
-  <script
-    src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/minisearch@6.1.0/dist/umd/index.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/minisearch@6.1.0/dist/umd/index.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
   <script>
-
-
 
 
 rows = {{ data | tojson | safe}};
@@ -268,23 +262,11 @@ if (search_input === 'None') {
 }
 
 
-
-
-
-
 $(document).ready(function() {
-
-
-
-
-
-
 
   if ((search_input !== null) && (search_input !== NaN) && (search_input !== 'None')  && (search_input !== '')) {
     document.getElementById("search-input").value = search_input
   }
-
-  
 
   var author_select_dta = {{ autdata | tojson | safe}};
 
@@ -345,7 +327,6 @@ var configuration = {
 }
 
 itemsjs = itemsjs(rows, configuration);
-
 var searchResultData = []
 
 
